<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginbg">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4112421F"/>
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginTop="4dp"
         android:fillViewport="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >

             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="140dp"
                 android:background="#6DD6DCDB"
                 android:fontFamily="@font/alex_brush"
                 android:text="Z"
                 android:textColor="@color/grey"
                 android:textSize="50sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />


             <EditText
                 android:id="@+id/inputEmail"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="24dp"
                 android:background="#6DD6DCDB"
                 android:drawableStart="@drawable/ic_baseline_email_24"
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/Loginemail"
                 android:inputType="textEmailAddress"
                 android:paddingStart="20dp"
                 android:paddingTop="13dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="13dp"
                 android:textColor="@color/grey"
                 android:textColorHint="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />

             <EditText
                 android:id="@+id/inputPassword"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#6DD6DCDB"
                 android:drawableStart="@drawable/ic_baseline_security_24"
                 android:drawableLeft="@drawable/ic_baseline_security_24"
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="@string/LoginPassword"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:paddingTop="13dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="13dp"
                 android:textColor="@color/grey"
                 android:textColorHint="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                 app:layout_constraintStart_toStartOf="@+id/inputEmail"
                 app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

             <TextView
                 android:id="@+id/forgetPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#6DD6DCDB"
                 android:text="@string/forget_password"
                 android:textColor="@color/grey"
                 android:textSize="15sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#6DD6DCDB"
                 android:text="@string/remember_me"
                 android:textColor="@color/grey"
                 android:textSize="15sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toStartOf="@+id/inputPassword"
                 app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:background="#6DD6DCDB"
                 android:padding="10dp"
                 android:text="@string/Login_sign_up"
                 android:textColor="@color/grey"
                 android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="@+id/forgetPassword"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="@+id/checkBox"
                 app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />

             <TextView
                 android:id="@+id/CreateAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#6DD6DCDB"
                 android:text="@string/create_new_account"
                 android:textColor="@color/grey"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="@+id/btnLogin"
                 app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

             <TextView
                 android:id="@+id/OR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="#6DD6DCDB"
                 android:text="@string/or"
                 android:textColor="@color/grey"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/CreateAccount"
                 app:layout_constraintStart_toStartOf="@+id/CreateAccount"
                 app:layout_constraintTop_toBottomOf="@+id/CreateAccount" />

             <View
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:background="#6DD6DCDB"
                 app:layout_constraintBottom_toBottomOf="@+id/OR"
                 app:layout_constraintEnd_toStartOf="@+id/OR"
                 app:layout_constraintStart_toStartOf="@+id/btnLogin"
                 app:layout_constraintTop_toTopOf="@+id/OR" />

             <View
                 android:id="@+id/view2"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/OR"
                 app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/OR"
                 app:layout_constraintTop_toTopOf="@+id/OR"
                 app:layout_constraintVertical_bias="0.0"
                 android:layout_marginLeft="16dp" />


             <View
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="-16dp"
                 tools:layout_editor_absoluteY="-48dp" />

             <ImageView
                 android:id="@+id/fbLogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="56dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/view2"
                 app:layout_constraintHorizontal_bias="0.652"
                 app:layout_constraintStart_toEndOf="@+id/GitHubLogo"
                 app:srcCompat="@drawable/fblogoicon" />

             <ImageView
                 android:id="@+id/GitHubLogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="232dp"
                 android:layout_marginTop="630dp"
                 android:layout_marginEnd="139dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/googleLogo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/gitlogoicon" />

             <ImageView
                 android:id="@+id/googleLogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="232dp"
                 android:layout_marginRight="232dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/GitHubLogo"
                 app:layout_constraintVertical_bias="0.02"
                 app:srcCompat="@drawable/googlelogoicon" />

             <ImageView
                 android:id="@+id/whatsuplogo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/googleLogo"
                 app:layout_constraintHorizontal_bias="0.538"
                 app:layout_constraintStart_toStartOf="@+id/view"
                 app:layout_constraintTop_toTopOf="@+id/googleLogo"
                 app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/whatsuplogoicon" />

         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>